--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "electron-quick-start",
+  "name": "mytrax",
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/giladgo/mytrax",
   "keywords": [
     "Electron",
     "quick",
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "bluebird": "^3.4.6",
+    "nedb": "^1.8.0",
     "request": "^2.78.0",
     "request-promise": "^4.1.1"
   }
